<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name" tools:ignore="PrivateResource">Poker Civilizations</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_map">Map</string>
    <string name="access_token">pk.eyJ1IjoiYnJlczE5OTAiLCJhIjoiY2s3OTJwZHduMGw3ZDNsbnl5d3gxZ3FiMiJ9.2Q9x3rLq6CR2bqYRYMwlWg</string>
    <string name="confirm_state_choice">Please confirm your state choice</string>
    <string name="poker_fight">FIGHT</string>
    <string name="poker">Poker</string>
    <string name="player">PLAYER</string>
    <string name="opponent">OPPONENT</string>
    <string name="dealer">DEALER</string>
    <string name="deal_cards_text">Deal cards</string>
    <string name="betting_text">BETTING</string>
    <string name="betting_player_text">YOU</string>
    <string name="betting_opponent_text">OPPONENT</string>
    <string name="starting_bet">1</string>
    <string name="choose_cards_button">CHOOSE CARDS</string>
    <string name="confirm_choice_button">CONFIRM</string>
    <string name="result_button_text">SHOW RESULTS</string>
    <string name="draw_dialog_text">The game resulted in a draw!</string>
</resources>
